# mark-toc

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  DEVELOPING.md  README.md  bumpver.toml  pyproject.toml
.github/workflows/: build.yaml
src/mark_toc/: cli.py  iofile.py  mdfile.py
