[project]
name = "mark-toc"
version = "0.5.0"
description = "Generate table of contents in Markdown files based on headings"
readme = "README.md"
authors = [
    { name = "jmknoble", email = "jmknoble@pobox.com" }
]
license = { file = "LICENSE" }
keywords = [
    "cli",
    "development",
    "markdown",
    "pre-commit",
    "table of contents",
    "text",
]
classifiers = [  # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=1.12.3",
]

[project.urls]
Repository = "https://github.com/jmknoble/mark-toc"

[project.scripts]
mark-toc = "mark_toc.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "invoke>=2.2.0",
    "pre-commit-tool>=0.1.6",
    "ruff>=0.7.1",
    "sphinx>=3.0.4,<4",
]

[tool.hatch.build.targets.sdist]
# https://hatch.pypa.io/latest/config/build/#file-selection
#
# include = []
exclude = [
    ".[!.]*",
    "DEVELOPING.md",
    "build",
    "dist",
    "docs",
    "examples",
    "tests",
    "tests.*",
    "util",
    "*.egg-info",
]
